--- a/stable/zammad/values.yaml
+++ b/stable/zammad/values.yaml
@@ -1,83 +1,72 @@
-image:
-  repository: zammad/zammad-docker-compose
-  tag: 2.6.0-31
-  pullPolicy: IfNotPresent
+zammad:
+  image:
+    repository: zammad/zammad-docker-compose
+    tag: 2.6.0-31
+    pullPolicy: IfNotPresent
 
-service:
-  type: ClusterIP
-  port: 80
+  service:
+    type: ClusterIP
+    port: 80
 
-ingress:
-  enabled: false
-  annotations:
-    ingress.kubernetes.io/proxy-body-size: 50m
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  path: /
-  hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  ingress:
+    enabled: false
+    annotations:
+      ingress.kubernetes.io/proxy-body-size: 50m
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    path: /
+    hosts:
+      - chart-example.local
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
 
-# zammad containers can be configured by env vars
-env:
-  ELASTICSEARCH_HOST: zammad-elasticsearch-client
-  ELASTICSEARCH_PORT: 9200
-  MEMCACHED_HOST: zammad-memcached
-  MEMCACHED_PORT: 11211
-  POSTGRESQL_HOST: zammad-postgresql
-  POSTGRESQL_PORT: 5432
-  POSTGRESQL_USER: zammad
-  POSTGRESQL_PASS: zammad
-  POSTGRESQL_DB: zammad_production
-  POSTGRESQL_DB_CREATE: true
-  ZAMMAD_RAILSSERVER_HOST: zammad-railsserver
-  ZAMMAD_RAILSSERVER_PORT: 3000
-  ZAMMAD_WEBSOCKET_HOST: zammad-websocket
-  ZAMMAD_WEBSOCKET_PORT: 6042
-  NGINX_SERVER_NAME: _
+  # zammad containers can be configured by env vars
+  env:
+    ELASTICSEARCH_HOST: zammad-elasticsearch-client
+    ELASTICSEARCH_PORT: 9200
+    MEMCACHED_HOST: zammad-memcached
+    MEMCACHED_PORT: 11211
+    POSTGRESQL_HOST: zammad-postgresql
+    POSTGRESQL_PORT: 5432
+    POSTGRESQL_USER: zammad
+    POSTGRESQL_PASS: zammad
+    POSTGRESQL_DB: zammad_production
+    POSTGRESQL_DB_CREATE: true
+    ZAMMAD_RAILSSERVER_HOST: zammad-railsserver
+    ZAMMAD_RAILSSERVER_PORT: 3000
+    ZAMMAD_WEBSOCKET_HOST: zammad-websocket
+    ZAMMAD_WEBSOCKET_PORT: 6042
+    NGINX_SERVER_NAME: _
 
-persistence:
-  enabled: true
-  ## A manually managed Persistent Volume and Claim
-  ## Requires persistence.enabled: true
-  ## If defined, PVC must be created manually before volume will be bound
-  # existingClaim:
+  persistence:
+    enabled: true
+    accessMode: ReadWriteOnce
+    size: 15Gi
 
-  ## rabbitmq data Persistent Volume Storage Class
-  ## If defined, storageClassName: <storageClass>
-  ## If set to "-", storageClassName: "", which disables dynamic provisioning
-  ## If undefined (the default) or set to null, no storageClassName spec is
-  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-  ##   GKE, AWS & OpenStack)
-  ##
-  # storageClass: "-"
-  accessMode: ReadWriteOnce
-  size: 10Gi
+  resources:
+    nginx: {}
+    railsserver: {}
+    scheduler: {}
+    websocket: {}
+      # We usually recommend not to specify default resources and to leave this as a conscious
+      # choice for the user. This also increases chances charts run on environments with little
+      # resources, such as Minikube. If you do want to specify resources, uncomment the following
+      # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+      # limits:
+      #  cpu: 100m
+      #  memory: 128Mi
+      # requests:
+      #  cpu: 100m
+      #  memory: 128Mi
 
-resources:
-  nginx: {}
-  railsserver: {}
-  scheduler: {}
-  websocket: {}
-    # We usually recommend not to specify default resources and to leave this as a conscious
-    # choice for the user. This also increases chances charts run on environments with little
-    # resources, such as Minikube. If you do want to specify resources, uncomment the following
-    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-    # limits:
-    #  cpu: 100m
-    #  memory: 128Mi
-    # requests:
-    #  cpu: 100m
-    #  memory: 128Mi
+  nodeSelector: {}
 
-nodeSelector: {}
+  tolerations: []
 
-tolerations: []
+  affinity: {}
 
-affinity: {}
 
 elasticsearch:
   image:
